# keycloak-congo

./: .cursorignore  .gitignore  Makefile  README.md
applications/backend-demo/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
applications/backend-demo/src/: __init__.py  main.py
applications/backend-demo/src/api/: auth.py  routes.py
applications/backend-demo/src/utils/: config.py
compose/: docker-compose.full.yml  docker-compose.multi-kong.yml
compose/environments/: dev.env.example  prod.env.example
docs/: architecture.md  cli-reference.md  deployment-guide.md  multi-kong-setup.md
infrastructure/keycloak/: .env.example  .gitignore  README.md  docker-compose.yml
infrastructure/keycloak/config/realms/: README.md  internal-realm.json  kong-realm.json
infrastructure/kong/: .env.example  README.md  docker-compose.yml
infrastructure/kong/config/: kong.template.yml
infrastructure/kong/config/instances/: README.md  kong-internal.yml  (+1 more)
tools/: QUICKSTART.md  README.md  USAGE_EXAMPLES.md
tools/deployment-cli/: Makefile  README.md  go.mod  main.go
tools/deployment-cli/cmd/: configcmd.go  deploy.go  down.go  kong.go  logs.go  root.go  status.go
tools/deployment-cli/examples/: deploy_workflow.sh  multi_kong_setup.sh
tools/testing-cli/: README.md  pyproject.toml  requirements.txt  test.sh
tools/testing-cli/examples/: admin_operations.py  test_workflow.sh
tools/testing-cli/src/: api_tester.py  cli.py  keycloak_client.py  reporter.py
tools/testing-cli/src/kc_test/: __init__.py  api_tester.py  cli.py  config.py
(+3 files in other folders)
