[project]
name = "kc_test"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "requests>=2.32.3",
    "python-jose>=3.3.0",
    "pydantic>=2.9.2",
    "rich>=13.9.2",
    "httpx>=0.27.2",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["black>=24.0.0", "ruff>=0.6.0"]

[project.scripts]
kc-test = "kc_test.cli:main"

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"
